# ProfessionalC-

./: CMakeLists.txt  README.md
Chapter1/: CMakeLists.txt
Chapter1/employeeRecords/: CMakeLists.txt  employee.cpp  employee.hpp  records.cpp  test_employee.cpp
Chapter1/inc/: crashCourse.hpp  notes.txt
Chapter1/src/: crashCourse.cpp  main.cpp  module_a.cxx
Chapter1/test/: main.cpp
Chapter4/: CMakeLists.txt
Chapter4/ChessGame/: CMakeLists.txt
Chapter4/ChessGame/inc/: chessGame.hpp
Chapter4/ChessGame/src/: chessGame.cpp  main.cpp
Chapter4/ChessGame/test/: test_chessGame.cpp
